# icu-learn1

./: .gitignore  README.md  poe_tasks.toml  pyproject.toml
src/icu_learn1/: __init__.py  ex1.py  ex1b.py  ex2.py  ex2b.py  ex3.py  ex3b.py  jp_hira_kana.py  rule1.py  rule2.py  test_stability.py  u_kf_upper.py
